# script_set

./: README.md
adb/: adbfile.sh
bash/: argv1.sh  cmake.sh  file.sh  log.sh  record.sh  replace_sdk.sh  string.sh
cmake/: JFUtils.cmake  JfModule.cmake  JfUtil.cmake  OpenCVModule.cmake  Test.cmake  checklist  color.cmake  module.cmake
git/: branch.md  github.md  info.md  info.txt  merge.md  tag.md
python/: focus.py  jf_cmake.py  jf_cmake_origin.py  jf_cmake_origin1.py  jf_file.py  jf_log.py
python/first/: main_linux.py
python/qt_prj_dir_template_win/vs_project_root/: focus.py
python/qt_prj_dir_template_win/vs_project_root/src/o_cml/: CMakeLists.txt  main.cpp
python/template/: for_vs_compile_focus.py
python/template/pe-face_auto_calib-cmake_sample/: CMakeLists-sub.txt  CMakeLists.txt  jf_cmake.py
src/bak/: CMakeLists.txt  EnumAdaptMacro.hpp  MyAdap.cppddd  MyAdapcopy.hppfdfdf  MyAdapt.cpp  MyAdapt.hpp  MyCallback.cpp  MyCamera.hpp  MyCameracpp  MyFlags.cpp  MyFlags.hpp  MyGbuffer.cpp  MyGbuffer.hpp  MyProcess.cpp  MyProcess.hpp  MySdk.cpp  MySdk.hpp
src/e_tool/: CMakeLists.txt  main.cpp  main.hpp
src/e_tool/cmake/: CMakeLists.txt  build.sh
src/m_camera/: CMakeLists.txt
src/m_camera/inc/: pmem.h  pmem_id.h  qcarcam.h  qcarcam_types.h
src/m_internal/: EnumAdaptMacro.hpp  MyAdapt.hpp  MyCallback.cpp  MyCallback.hpp  MyGbuffer.cpp  MyGbuffer.hpp  clock.hpp  enum-string-macro.hpp  pic_decoder.hpp  sdk-callback.hpp  sdk-enum-adapt.hpp  sdk-pkg.cpp  sdk-pkg.hpp  sync.hpp  threadpool.cpp  threadpool.hpp  timer.hpp
src/m_sdk/: CMakeLists.txt  switch_set.json
src/m_sdk/inc/: LogUtil.h
src/m_sdk/inc/VehicleClient/include/: VehicleClient.h  type.h
src/m_sdk/inc/common_base/: CBaseClient.h  CBaseEndpoint.h  CBaseEventLoop.h  CBaseFdWatch.h  CBaseLoopTimer.h  CBaseMutexLock.h  CBaseNameProxy.h  CBasePipe.h  CBaseSemaphore.h  CBaseServer.h  CBaseSocketFactory.h  CBaseSysDep.h  CBaseThread.h  CBaseWorker.h  CEntityContainer.h  CEventFd.h  CFdEventLoop.h  CFdbCJsonMsgBuilder.h  CFdbContext.h  CFdbIfMessageHeader.h  CFdbIfMsgTokens.h  CFdbIfNameServer.h  CFdbMessage.h  CFdbMsgSubscribe.h  CFdbProtoMsgBuilder.h  CFdbRawMsgBuilder.h  CFdbSession.h  CFdbSessionContainer.h  CFdbSimpleMsgBuilder.h  CFdbSimpleSerializer.h  CInterNameProxy.h  CIntraNameProxy.h  CMethodFdWatch.h  CMethodLoopTimer.h  CNanoTimer.h  CSocketImp.h  CSysFdWatch.h  CSysLoopTimer.h  CThreadEventLoop.h  IFdbMsgBuilder.h  (+8 more)
src/m_sdk/inc/google/protobuf/: any.pb.h  any_test.pb.cc  any_test.pb.h  api.pb.h  descriptor.pb.h  duration.pb.h  empty.pb.h  field_mask.pb.h  generated_message_reflection.cc  map_lite_unittest.pb.cc  map_lite_unittest.pb.h  map_proto2_unittest.pb.cc  map_proto2_unittest.pb.h  map_unittest.pb.cc  map_unittest.pb.h  port_def.inc  repeated_field.h  repeated_field_unittest.cc  source_context.pb.h  struct.pb.h  timestamp.pb.h  type.pb.h  unittest.pb.cc  unittest.pb.h  unittest_arena.pb.cc  unittest_arena.pb.h  unittest_custom_options.pb.cc  unittest_custom_options.pb.h  unittest_drop_unknown_fields.pb.cc  unittest_drop_unknown_fields.pb.h  unittest_embed_optimize_for.pb.cc  unittest_embed_optimize_for.pb.h  unittest_empty.pb.cc  unittest_empty.pb.h  unittest_import.pb.cc  unittest_import.pb.h  unittest_import_lite.pb.cc  unittest_import_lite.pb.h  unittest_import_public.pb.cc  unittest_import_public.pb.h  (+39 more)
src/m_sdk/inc/google/protobuf/compiler/: command_line_interface.cc  command_line_interface_unittest.cc  importer.cc  main.cc  plugin.pb.h
src/m_sdk/inc/google/protobuf/compiler/cpp/: cpp_message.cc  cpp_test_bad_identifiers.pb.cc  cpp_test_bad_identifiers.pb.h  cpp_test_large_enum_value.pb.cc  cpp_test_large_enum_value.pb.h
src/m_sdk/inc/google/protobuf/compiler/csharp/: csharp_field_base.cc  csharp_field_base.h  csharp_map_field.cc  csharp_map_field.h  csharp_message.cc  csharp_message.h  csharp_repeated_enum_field.cc  csharp_repeated_enum_field.h  csharp_repeated_message_field.cc  csharp_repeated_message_field.h  csharp_repeated_primitive_field.cc  csharp_repeated_primitive_field.h  csharp_wrapper_field.cc  csharp_wrapper_field.h
src/m_sdk/inc/google/protobuf/compiler/objectivec/: objectivec_file.cc  objectivec_helpers.cc
src/m_sdk/inc/google/protobuf/compiler/php/: php_generator.cc
src/m_sdk/inc/google/protobuf/compiler/python/: python_generator.cc
src/m_sdk/inc/google/protobuf/stubs/: common.h
src/m_sdk/inc/google/protobuf/util/: json_format.pb.cc  json_format.pb.h  json_format_proto3.pb.cc  json_format_proto3.pb.h  message_differencer_unittest.pb.cc  message_differencer_unittest.pb.h
src/m_sdk/inc/google/protobuf/util/internal/: json_stream_parser.cc  proto_writer.cc
src/m_sdk/inc/google/protobuf/util/internal/testdata/: anys.pb.cc  anys.pb.h  books.pb.cc  books.pb.h  default_value.pb.cc  default_value.pb.h  default_value_test.pb.cc  default_value_test.pb.h  field_mask.pb.cc  field_mask.pb.h  maps.pb.cc  maps.pb.h  oneofs.pb.cc  oneofs.pb.h  proto3.pb.cc  proto3.pb.h  struct.pb.cc  struct.pb.h  timestamp_duration.pb.cc  timestamp_duration.pb.h  wrappers.pb.cc  wrappers.pb.h
src/m_sdk/package/inc_lib_bak/: ArcDriveSDK.h
src/m_sdk/package/temp_dir/: releasenote.txt
src/m_sdk/package/temp_dir/inc/: ArcDriveSDK.h  asvloffscreen.h
src/m_sdk/package/temp_dir/samplecode/: ArcDmsSample.cpp
test/: cmake2.sh
